--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -46,6 +46,20 @@ title: Lab Overview
   %p PhD Candidate
   %p Brennan McFarland received his BS in both neuroscience and psychology from Ursinus College in 2016. His undergraduate research focused on mitigating oxidative stress contributing to dopaminergic neuronal degeneration in Caenorhabditis elegans. Additionally, he worked in a neurodevelopmental lab investigating the potential role of microglia as guidepost cells and their influence on corticogenesis in a fetal alcohol syndrome disorder mouse model. Now at Drexel, Brennan is a first-year biomedical science PhD student and joined the lab in August 2016. Currently within the lab, he is focused on understanding the molecular cues that determine synaptic partners during development by using the model organism <em>Drosophila melanogaster</em>. Additionally, he is incorporating genetic engineering tools to modify synapses between neuronal populations. Outside of the lab, Brennan enjoys spending his free time reading, watching classic and foreign cinema (his favorite genre being horror/suspense), and volunteering as a Crisis Text Line counselor.
 %br
+%br
+.clearfix
+  = image_tag "natalie-smolin.jpg", class: "left"
+  %h5 Natalie Smolin, MS
+  %p PhD Candidate
+  %p Natalie Smolin graduated with a BS in Biology from The Pennsylvania State University and an MS in Biomedical Sciences from The University of Pittsburgh. Throughout her academic career, she has worked in numerous research labs, focusing on cancer pharmacology, plant pathology, and immunology.  At the Hillman Cancer Center, Natalie investigated PUMA, CD47-1, and CD47-2, and their roles relating to programmed cell death. She investigated the roles of inbreeding and genetic variation on herbivory and the immune response at the Pennsylvania State University. She also worked at the University of Pennsylvania exploring the mechanisms by which organisms that recovered from sepsis developed a long-term immune system depression. Now at the von Reyn lab, Natalie works towards understanding synaptic connection specificity, with the long-term goal of changing synaptic partner specificity. Outside of the lab, Natalie enjoys creating stained glass mosaics, reading, and taking long walks with her dog.
+%br
+%br
+.clearfix
+  = image_tag "bryce-hina.jpg", class: "left"
+  %h5 Bryce Hina, BS
+  %p PhD Candidate
+  %p Bryce Hina graduated with a BS in Electrical Engineering and a BS in Biomedical Engineering from Trine University and is currently pursuing his PhD in Biomedical Engineering. He gained industry experience at Zimmer Biomet as a Manufacturing Engineer, where he helped research and development teams in the design and manufacturing of new orthopedics. He now seeks to understand multimodal sensory integration by studying the model organism <em>Drosophila melanogaster</em> using current genetic tools and methods. In his free time, he enjoys flying RC airplanes, watching movies, and watching hockey games.
+%br
 
 %h4 Research Specialist
 %hr
@@ -61,6 +75,16 @@ title: Lab Overview
     = link_to "Visit her portfolio site.", "http://www.ljsolomon.com"
 %br
 
+%h4 Research Technicican 
+%hr
+.clearfix
+  = image_tag "liudi-luo.png", class: "left", style: "margin-bottom: 1em;"
+  %h5 Liudi Luo, MS
+  %p
+    Liudi is a Research Technician in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University. As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages. As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs. As a research technician, he is now developing novel behavioral assays for investigating sensorimotor transformations in the fly. 
+%br
+%br
+
 %h4 Masters Students
 %hr 
 .clearfix
@@ -69,18 +93,35 @@ title: Lab Overview
   %p 
     Roze Alzabey is a fourth-year Drexel student working towards her bachelor’s and master’s dual degree in Biomedical Engineering with a concentration in Neuroengineering. She previously participated in the STAR Scholar research program where she worked in the NCE Lab and investigated the role of Teneurin in establishing connectivity within the optic glomeruli of <em>Drosophila</em>. She has now rejoined the lab for her master’s thesis project that focuses on characterizing gene expression in distinct neural populations of the <em>Drosophila</em> visual system. She is highly involved at Drexel and is a member of the Student Ambassador Program, a Biomedical Engineering Peer Mentor, and is part of the Undergraduate Research Leaders. Outside of the lab, she enjoys fun things like trying new food and parking her Yaris in impossibly tight spaces.
 %br
-.clearfix
-  = image_tag "liudi-luo.png", class: "left", style: "margin-bottom: 1em;"
-  %h5 Liudi Luo, MS
-  %p
-    Liudi is a Research Technician in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University. As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages. As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs. As a research technician, he is now developing novel behavioral assays for investigating sensorimotor transformations in the fly. 
 %br
 
 .clearfix
   = image_tag "alexander-vasserman.png", class: "left"
   %h5 Alexander Vasserman
   %p
-    Alexander Vasserman is a third-year Drexel student working towards a bachelors/masters dual degree in Biomedical Engineering. His concentration in neuroengineering and interest in the bridge between computer science and neuroscience brought him to the NCE Lab. He is currently working with with data from the hemibrain connectome projecet to map descending neuron circuit connectivity in Drosophila melanogaster. Outside the lab, Alex plays on the Drexel's Mens Ultimate Frisbee team, and enjoys rock climbing, programming, and watching football.
+    Alexander Vasserman is a fourth-year Drexel student working towards a BS/MS dual degree in Biomedical Engineering. His concentration in neuroengineering and interest in the bridge between computer science and neuroscience brought him to the NCE Lab. He is currently working with Dr. Jessica Ausborn (DUCOM) to create a computational model that will help understand the mechanism(s) underlying sensory to motor transformations within certain neurons of the <em>Drosophila melanogaster</em> escape circuit. Outside the lab, Alex plays on the Drexel's Mens Ultimate Frisbee team and enjoys rock climbing, programming, and watching football.
+%br
+%br
+.clearfix
+  = image_tag "labeausha-harris.jpg", class: "left"
+  %h5 LaBeausha 'Beau' H Harris
+  %p
+    Beau who has her undergraduate background in mathematics and mechanical engineering joined the von Reyn Lab at Drexel in September 2020. Prior, Beau gained her undergraduate degree in mathematics at Mississippi University of Women and her undergraduate degree in mechanical engineering at The University of Alabama. Her current MS thesis work focuses on understanding how neural activity dictates wiring decisions in the developing brain. She hopes that her work to understand wiring mechanisms will lead to future innovative clinical therapies to restore damaged wiring after stroke or traumatic brain injuries.  
+%br
+%br
+.clearfix
+  = image_tag "jillian-saunders.jpg", class: "left"
+  %h5 Jillian Saunders
+  %p
+    Jillian Saunders is a fourth year student pursuing her bachelor’s and master’s dual degree in Biomedical Engineering with a concentration in Biomaterials and Tissue Engineering. Jillian also has a strong passion for neuroscience. Previous research experiences include conducting undergraduate research in the Akins Lab at Drexel University, where she studied potential mechanisms for Fragile X Granule localization in the mouse spinal cord, and working as a research assistant in the Argon Lab at the Children’s Hospital of Philadelphia where she studied the unfolding protein response. Jillian has now joined the NCE Lab for her master’s thesis which will focus on characterizing astrocyte-like-glia in the Drosophila visual system. Outside of research, Jillian is the President for Drexel’s Engineers Without Borders and Vice President for the Society of Women Engineers. In her free time, she enjoys exploring local restaurants, hiking, and traveling. 
+%br
+%br
+.clearfix
+  = image_tag "pratishtha-guckhool.jpg", class: "left"
+  %h5 Pratishtha Guckhool
+  %p
+    Pratishtha Guckhool is a fourth-year Drexel student working towards her bachelor’s and master’s dual degree in Biomedical Engineering with a concentration in Neuroengineering. Her interest in neural circuits brought her to the NCE lab where she worked on her STAR Scholar Research project and investigated the role of the cell adhesion molecules, Neurexins and Neuroligins on neurite structure and synaptic connectivity in Drosophila melanogaster. She is currently working on her master’s thesis project that focuses on the synaptic adhesion molecules involved in the regulation of synapse specificity in different neural populations in the optic lobes of Drosophila. Outside the lab, Pratishtha enjoys baking, painting, and doing yoga. 
+%br
 %br
 
 %h4 Undergraduate Students
@@ -90,14 +131,32 @@ title: Lab Overview
   %h5 Bhakti Marfatia
   %p Bhakti Marfatia is a second-year Drexel student working towards her bachelor’s degree in Health Sciences. At Drexel, she was previously involved in the SEA-Phages program where she was able to work with bacteriophages and conduct her own research regarding the effectiveness of bacteriophages compared to antibiotics. It is her interest in neuroscience and neural circuits that has brought her to the NCE Lab where she is currently involved in mapping sensorimotor circuit connectivity in the model organism Drosophila melanogaster. Outside the lab, Bhakti enjoys reading, drawing, and taking pictures of nature. 
 %br
+%br
+.clearfix
+  = image_tag "khang-duong.jpg", class: "left"
+  %h5 Khang Duong
+  %p Khang Duong is a second-year Drexel student working towards his bachelor’s degree in Biomedical Engineering. He plans to pursue a BS/MS dual degree in Biomedical Engineering with a concentration in Neuroengineering. His interest in neuroengineering and programming has brought him to the NCE lab as a STAR scholar where he is currently involved in mapping out the neural circuits that are hypothesized to perform sensorimotor transformations in the model organism Drosophila melanogaster. At Drexel, he is involved in the Drexel Community Scholar program and the Biomedical Engineering Peer Mentor program. Outside of the lab, he enjoys spending his time swimming, playing tennis, and watching endless amounts of suspense/horror movies. 
+%br
+%br
+.clearfix
+  = image_tag "connor-zabielski.jpg", class: "left"
+  %h5 Connor Zabielski
+  %p Connor Zabielski is a Drexel STAR scholar pursuing a bachelor’s degree in Biomedical Engineering. In the future, he aspires to research and develop medical devices that could help those with neurodegenerative diseases like Parkinson’s and Alzheimer’s disease. It was this interest in neuroscience that brought him to the NCE lab. Currently, Connor is using the Drosophila hemi-brain dataset to investigate a specific class of visual projection neurons, called LC neurons, in order to gain deeper insights into the visually evoked escape behavior of Drosophila and the neural circuitry that causes it. At Drexel, he is a member of the Sigma Phi Epsilon fraternity and plays bass guitar in the Fusion Ensemble. In his free time, Connor enjoys playing guitar, learning French, reading, and playing Dungeons and Dragons with his friends.
+%br
+%br
+.clearfix
+  = image_tag "joseph-rajasekaran.jpg", class: "left"
+  %h5 Joseph Rajasekaran
+  %p Joseph Rajasekaran is a second-year Drexel student working towards his bachelor’s degree in Biology. As a freshman at Drexel, he participated in the SEA-Phages program where he isolated a new bacteriophage and annotated its genome. He also has experience maintaining genetic Drosophila melanogaster crosses at Marenda Lab. His interest in neuroscience research brought him to the NCE lab where he is currently involved in modeling synaptic connections in Drosophila to study dendritic integration of descending neurons. Outside the lab, Joseph enjoys reading, playing and listening to music, and playing tennis. 
+%br
+%br
+
 
 %h4 STAR Scholars
 %hr
 %ul
   %li
     %h5 Daniel Gallagher
-  %li
-    %h5 Pratishtha Guckhool
   %li
     %h5 Neha Nevasekar
   %li
